feat: add mujoco flat videos.

--- a/index.html
+++ b/index.html
@@ -208,25 +208,25 @@
     <div class="columns is-variable is-1 is-centered">
       <div class="column is-one-third has-text-centered">
         <video controls playsinline style="width:100%;">
-          <source src="./static/videos/flat1.mp4" type="video/mp4">
+          <source src="./static/videos/mujoco_base.mp4" type="video/mp4">
         </video>
-        <p>Flat — clip 1</p>
+        <p>BaseLine</p>
       </div>
       <div class="column is-one-third has-text-centered">
         <video controls playsinline style="width:100%;">
-          <source src="./static/videos/flat2.mp4" type="video/mp4">
+          <source src="./static/videos/mujoco_him.mp4" type="video/mp4">
         </video>
-        <p>Flat — clip 2</p>
+        <p>HimLoco</p>
       </div>
       <div class="column is-one-third has-text-centered">
         <video controls playsinline style="width:100%;">
-          <source src="./static/videos/flat3.mp4" type="video/mp4">
+          <source src="./static/videos/mujoco_fdmidm.mp4" type="video/mp4">
         </video>
-        <p>Flat — clip 3</p>
+        <p>Ours</p>
       </div>
     </div>
 
-    <h3 class="title is-4">Rough</h3>
+    <!-- <h3 class="title is-4">Rough</h3>
     <div class="columns is-variable is-1 is-centered">
       <div class="column is-one-third has-text-centered">
         <video controls playsinline style="width:100%;">
@@ -290,7 +290,7 @@
         </video>
         <p>Slope — clip 3</p>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </section>
